--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <h2>Zdjęcia</h2>
     <div class="zdjecia">
         <div id="bojler" class="zdj">
-        <h3>Bojler</h3>
-        <img src="https://i1.sndcdn.com/artworks-000620864473-mnjhzj-t500x500.jpg" alt="jas[er Like]">
+            <h3>Bojler</h3>
+            <img src="https://i1.sndcdn.com/artworks-000620864473-mnjhzj-t500x500.jpg" alt="jas[er Like]">
         </div>
         <div id="uśmiech" class="zdj">
-        <h3>Uśmiech</h3>
-        <img src="https://assets.puzzlefactory.com/puzzle/448/023/original.jpg" alt="Uśmiech">
+            <h3>Uśmiech</h3>
+            <img src="https://assets.puzzlefactory.com/puzzle/448/023/original.jpg" alt="Uśmiech">
         </div>
         <div id="gagri" class="zdj">
-        <h3>Gagri Gagri</h3>
-        <img src="https://images.steamusercontent.com/ugc/2292958138405981238/2792F1D835E4810FC9E680943CA2FC2FF0362D37/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Gagri">
+            <h3>Gagri Gagri</h3>
+            <img src="https://images.steamusercontent.com/ugc/2292958138405981238/2792F1D835E4810FC9E680943CA2FC2FF0362D37/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Gagri">
         </div>
         <div id="aha" class="zdj">
         <h3>AHA</h3>
@@ -59,5 +59,8 @@
         </div>
     </div>
     </main>
+    <footer>
+        <p>&copy; Nikodem Rejowski</p>
+    </footer>
 </body>
 </html>
